DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                        the base library name on Windows. Implemented automatic
                        linking of the VR Juggler libraries.
                        NEW VERSION: 2.1.11
Jun-26-2006 patrick     Added support for building universal binaries on Mac
                        OS X.
                        NEW VERSION: 2.1.10
Jun-19-2006 patrick     Refactored vrj::OsgApp so that the scene view is
                        updated only once per frame. Subclasses overriding
                        vrj::OsgApp::latePreFrame() must be sure to call up to
                        the base class implementation as the last step in the
                        override.
                        NEW VERSION: 2.1.9
May-24-2006 dshipton    Versioning of installables for multiple installations.
                        NEW VERSION: 2.1.8
Feb-15-2006 patrickh    Updated to VPR 1.1.16.
                        NEW VERSION: 2.1.7
Jan-08-2006 allenb      Added swapSync test application.
Jan-07-2006 allenb      Added GlExtensionLoader classes.
                        Added support for NV swap_group.
                        NEW VERSION: 2.1.6
Oct-18-2005 patrickh    Added the functions vrj::getVersionString() and
                        vrj::getVersionNumber().
                        NEW VERSION: 2.1.5
Jul-25-2005 patrickh    Added vrj::Projection::getNearFar().
                        NEW VERSION: 2.1.4
Jul-18-2005 patrickh    Do not call pfExit() in vrj::PfDrawManager::closeAPI().
                        Leave that up to application programmers to put at the
                        end of their main() function instead.
                        NEW VERSION: 2.1.3
Jul-11-2005 patrickh    Updated to VPR 1.1.3.
Jul-10-2005 patrickh    Updated to VPR 1.1.2.