@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Sep-07-2006 patrick     Improved error handling in viewport configurations.
 Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                         the base library name on Windows. Implemented automatic
                         linking of the VR Juggler libraries.
